# Lexical-benchmark

./: .gitignore  README.md  generate.py  get_entropy.py  get_stat.py  get_stat_batch.py  justfile  mypy.ini  notes.txt  plot_entropy_util.py  pyproject.toml  requirements.txt  stat_util.py
Eval/: Exp_human.py  Human.py  Plot infant data.py  Plot_loss.py  Recep_human.py  compute_prob.py  plot_final.py  plot_final_util.py  util.py
Eval/Exp_model/: Count_generation.py  Finetune-generation.py  Human-model.py  Human.py  Info_frame.csv  Lemma.csv  Lemma_size.csv  Plot_CHILDES.py  Plot_loss.py  Reference_model.py  Run_model.py  Segment.py  Vocab.csv  Vocab_size.csv  accum_util.py  beam_4.sh  count_words.py  generate.py  generation.py  generation_analysis_util.py  generation_util.py  h_char.py  info_frame.csv  lemma_frame.csv  plot_entropy.py  plot_entropy_util.py  plot_trend.py  prompted_generation.py  prompted_generation_beam.py  prompted_generation_topk.py  prompted_generation_topp.py  prompted_topk.sh  random_generation.py  random_generation_beam.py  random_generation_k.py  untitled0.py  word_frame.csv
Eval/Recep_model/: compute_prob.py  generate_scores.py  utils.py
docs/: extra_dependencies.md  select_test.md  wordlist.md
docs/datasets/: childes.md
lexical_benchmark/: __main__.py  nlp_tools.py  settings.py  utils.py
lexical_benchmark/datasets/human/: __init__.py  childes_clean.py  childes_preparation.py  extract_month.py  gold_reference.py  wordbank_cdi_prep.py
lexical_benchmark/datasets/human/childes/: __init__.py  clean.py  data.py  preparation.py  turn_taking.py
lexical_benchmark/datasets/machine/: create_dataset.py  merge_generations.py  phonemize.py  prepare_gen.py  probe_util.py  stela_transcripts.py
lexical_benchmark/datasets/machine/misc/: merge_generations.py  phonemize.py  preprocess.py  probe_util.py
lexical_benchmark/datasets/machine/stella/: __init__.py  clean.py  data.py  preparation.py
lexical_benchmark/datasets/parsing/: __init__.py
lexical_benchmark/datasets/parsing/cha/: __init__.py  __main__.py  extract.py  parser.py
lexical_benchmark/datasets/utils/: __init__.py  frequency_measures.py  lexicon.py  spacy_utils.py  text_cleaning.py  various.py
lexical_benchmark/datasets/utils/cha/: extract.py
lm_benchmark/: adjust_count.py  build_human_cdi.py  build_nonparametric.py  cf_analysis.py  dataset_explore.py  get_frequencies.py  match_frequencies.py  nlp_tools.py  parsing_utiliities.py  plot_util.py  settings.py  utils.py
lm_benchmark/analysis/: analysis_utils.py  freq_util.py  frequency_utils.py  morphology.py  score_util.py
lm_benchmark/analysis/entrypoints/: adjust_count.py  get_freq.py  get_score.py  match_freq.py
lm_benchmark/analysis/freq/: __init__.py  freq.py  freq_util.py
lm_benchmark/analysis/score/: __init__.py  score.py  score_util.py
lm_benchmark/analysis/utils/: __init__.py  freq_util.py
lm_benchmark/datasets/: __init__.py  human_cdi.py  machine_cdi.py
lm_benchmark/datasets/data_loaders/: parser.out
lm_benchmark/datasets/entrypoints/: build_human_cdi.py  cmd1.py
lm_benchmark/datasets/human_cdi/: __init__.py  childes.py  extract_month.py  gold_reference.py
lm_benchmark/datasets/machine_cdi/: __init__.py  create_dataset.py  merge_generations.py  prepare_gen.py  preprocess.py  probe_util.py  stela_transcripts.py
lm_benchmark/datasets/parsing_utils/: __init__.py  spacy_utils.py  various.py
lm_benchmark/datasets/utils/: __init__.py  spacy_utils.py  various.py
lm_benchmark/datasets/utils/cha/: extract.py  parser.py
lm_benchmark/entrypoints/: cmd1.py
lm_benchmark/model/: build_nonparametric.py  model_util.py  train.py
lm_benchmark/model/entrypoints/: build_nonparametric.py  train.py
notebooks/: .ruff.toml  CHILDES.ipynb  CHILDES_cleaning.ipynb  MB-CD_download.ipynb  STELLA.ipynb  Wordbank-CDI.ipynb  dataset_preparation.ipynb  exploring.ipynb  human_dataset_preparation.ipynb  lexicon.ipynb  testing_clean.ipynb
notebooks/stela_wf/: accepted.words.csv  chunk_avg.xlsx  rejected.words.csv
notebooks/testing_files/: Haggerty_haggerty.txt  MacWhinney_010523.txt  MacWhinney_020409.txt  MacWhinney_020608.txt  MacWhinney_020627.txt  MacWhinney_020805a.txt  MacWhinney_020805b.txt  MacWhinney_020805c.txt  MacWhinney_021022a.txt  MacWhinney_021022b.txt  MacWhinney_021101.txt  MacWhinney_021107.txt  MacWhinney_021114.txt  MacWhinney_030018a.txt  MacWhinney_030018b.txt  MacWhinney_030221.txt  MacWhinney_030526a.txt  MacWhinney_030625a.txt  MacWhinney_030625b.txt  MacWhinney_030804.txt  MacWhinney_030805.txt  MacWhinney_031001.txt  MacWhinney_031114.txt  MacWhinney_031128.txt  MacWhinney_040101.txt  MacWhinney_040117a.txt  MacWhinney_040117b.txt  MacWhinney_040315.txt  MacWhinney_040316a.txt  MacWhinney_040316b.txt  MacWhinney_040316c.txt  MacWhinney_040316d.txt  MacWhinney_040920d.txt  MacWhinney_050120a.txt  MacWhinney_050120b.txt  MacWhinney_050120c.txt  MacWhinney_050120d.txt  MacWhinney_050512.txt  MacWhinney_050622a.txt  MacWhinney_050622b.txt  (+38 more)
notebooks/tmp/: exploring.ipynb  testing_clean.ipynb
scripts/: CF_analysis.py  adjust_count.py  bach.py  build_human_cdi.py  build_nonparametric.py  compute_prob.py  dataset_explore.py  get_freq.py  match_freq.py  select_probe.py  util.py
scripts/lm_benchmark/: __init__.py  plot_util.py  settings.py  utils.py
scripts/lm_benchmark/analysis/: freq_util.py  morphology.py  score_util.py
scripts/lm_benchmark/datasets/: __init__.py
scripts/lm_benchmark/datasets/human_cdi/: __init__.py  gold_reference.py
scripts/lm_benchmark/datasets/machine_cdi/: __init__.py  accum_model.py  create_dataset.py  merge_generations.py  (+3 more)
scripts/lm_benchmark/model/: model_util.py
scripts/metric/recep/: compute_prob.py  get_recep.py  lm_scoring.py  recep_all_speech.py  utils_functions.py
scripts/plot_fig/: Analyze_generation.py  plot_exp_thresholds.py  plot_final.py  plot_final_util.py  plot_freq.py
scripts/select_test/: get_freq.py  get_stat.py  get_stat_batch.py  lm_scoring.py  preprocess.py  quantize_audio.py  recep_all_speech.py  stat_util.py  utils_functions.py  vocal_month.csv
(+31 files in other folders)
