[project]
name = "lexical-benchmark"
description = "A detailed comparison between human (CDI) and model performance at the lexical level"
authors = [
    { name = "Jing Liu", email = "jing.liu@student.ru.nl" },
    { name = "CoML Team", email = "dev@cognitive-ml.fr" },
]
license = { text = "MIT License" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
keywords = ["python"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
]
dynamic = ["dependencies", "version"]

[project.urls]
documentation = "https://github.com/Jing-L97/Lexical-benchmark"
repository = "https://github.com/Jing-L97/Lexical-benchmark"

[project.scripts]
# Analysis commands
lm-analysis-freq = "lm_benchmark.analysis.entrypoints.get_freq:main"
lm-analysis-score = "lm_benchmark.analysis.entrypoints.get_score:main"
lm-analysis-matching = "lm_benchmark.analysis.entrypoints.match_freq:main"

# A command to generate human data CSVs
lmb-build-human-data = "lm_benchmark.datasets.entrypoints.build_human_cdi:main"

[project.optional-dependencies]
dev = ["ruff", "mypy", "ipython", "jupyter"]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["lm_benchmark*"]
exclude = ["examples*", "tests*"]

[tool.ruff]
target-version = "py311"
line-length = 120
fixable = ["ALL"]


[tool.ruff.lint]
select = ["ALL"] # Be brave use all rules

# remove the ones that make no sense
ignore = [
    "D100",    # allow top doc-string to be missing
    "D401",    # imperative mood in docstring is ambiguous
    "S603",    # allow subprocess to be called using literals
    "PLR0913", # allow functions to have more tha 12 arguments
    "TRY003",  # allow Exceptions to contain long messages
    "EM101",   # allow Exceptions to contain literals
    "ANN003",  # allow **kwargs to be without type-hints
    "D107",    # allow __init__ without docstring
    "ANN101",  # "self" needs no typing (rule is Deprecated)
    "T201",    # allow 'print' statements
    "TD003",   # not all todos require a issue
    "D104",    # allow scripts not to have docstring on top
    "EM102",   # allow exception to use f-strings
]


[tool.ruff.lint.flake8-import-conventions.aliases]
typing = "t"

[tool.setuptools_scm]
